# op-alloy

./: Cargo.toml  cliff.toml  toc.js
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/consensus/src/receipt/: envelope.rs  mantle.rs  mod.rs  receipts.rs
crates/consensus/src/transaction/: deposit.rs  envelope.rs  mod.rs  typed.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: addresses.rs  chain.rs  genesis.rs  lib.rs  params.rs  rollup.rs  system.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: block.rs  block_info.rs  deposits.rs  fee.rs  lib.rs  utils.rs
crates/protocol/src/batch/: core.rs  inclusion.rs  mod.rs  single.rs
crates/provider/: Cargo.toml
crates/provider/src/ext/: engine.rs
crates/rpc-jsonrpsee/: Cargo.toml
crates/rpc-jsonrpsee/src/: traits.rs
crates/rpc-types/: Cargo.toml
crates/rpc-types-engine/: Cargo.toml
crates/rpc-types-engine/src/: attributes.rs  payload_v4.rs
crates/rpc-types/src/: config.rs  lib.rs  receipt.rs  sync.rs  transaction.rs
crates/rpc-types/src/transaction/: request.rs
scripts/: check_no_std.sh
