[package]
name = "mantle-alloy-rpc-types-engine"
description = "Mantle RPC types for the `engine` namespace"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
mantle-alloy-protocol.workspace = true

derive_more = { workspace = true, features = ["display"] }

# serde
serde = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std", "serde"]
std = [
  "alloy-primitives/std",
  "alloy-rpc-types-engine/std",
  "mantle-alloy-protocol/std",
]
serde = [
  "dep:serde",
  "dep:alloy-serde",
  "mantle-alloy-protocol/serde",
  "alloy-rpc-types-engine/serde",
]
