[package]
name = "op-alloy-rpc-types"
description = "Mantle RPC types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
op-alloy-consensus = { workspace = true, features = ["serde"] }

# Alloy
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] }
alloy-consensus.workspace = true
alloy-network-primitives.workspace = true
alloy-eips = { workspace = true, features = ["serde"] }

# Serde
alloy-serde = { workspace = true }
serde_with = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-rpc-types = { workspace = true, features = ["arbitrary"] }
arbitrary = { workspace = true, features = ["derive"] }
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }


[features]
default = ["std"]
std = [
  "alloy-network-primitives/std",
  "alloy-eips/std",
  "alloy-primitives/std",
  "alloy-rpc-types-eth/std",
]
arbitrary = [
  "std",
  "dep:arbitrary",
  "alloy-primitives/arbitrary",
  "alloy-rpc-types-eth/arbitrary",
  "op-alloy-consensus/arbitrary",
]
k256 = [
  "alloy-rpc-types-eth/k256",
  "op-alloy-consensus/k256",
]
